--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
@@ -399,7 +399,7 @@
                     <div class="col-md-12">
                         <div class="row" align="center">
                              <a href="#" th:href="@{/evaluacioncapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-                            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                            <button type="submit" id="guardar" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                             <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
 
                         </div>
@@ -419,6 +419,10 @@
 <script th:inline="javascript">
      Textheader('pnt_evca',document.title);
     $(document).ready(function () {
+         $('#guardar').click(function(){
+		validate_value_field();
+	});
+        
     if ([[${msg}]] === 0){
     swal({
     title: "Exito!",
