--- a/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
+++ b/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
@@ -73,9 +73,13 @@
 <script th:inline="javascript">
     $(document).ready(function () {
         
-    $('#guardar').click(function(){
-    $("#loader").addClass("loader");
-    });
+//    $('#guardar').click(function(){
+//    $("#loader").addClass("loader");
+//    });
+
+$('#guardar').click(function(){
+		validate_value_field();
+	});
   
     if ([[${msg}]] === 0){
     $("#loader").addClass("loader");
