--- a/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
@@ -109,9 +109,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     });
     
     $('#Asignarbtn').click(function(){
+        var flag =validate_value_field();
+        if(flag==false){
             $("#asignar").attr('action', '../beneficio/asignar/'+ $("#codem").val().toString());
-            $("form#asignar").submit();
-            
+            $("form#asignar").submit();  
+        }  
         });
         
 
