--- a/src/main/resources/templates/fragments/comision/comisionform.html
+++ b/src/main/resources/templates/fragments/comision/comisionform.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="row" align="center">
                      <a href="#" th:href="@{/comisiones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-                    <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                    <button type="submit" id="guardar"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                     <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                 </div>
 <!--                <div class="row">
@@ -109,6 +109,9 @@
                         }
                     } 
     $(document).ready(function () {
+         $('#guardar').click(function(){
+		validate_value_field();
+	});
         $('#fechadesdecomision').datepicker({
            dateFormat: 'dd/mm/yy'
         });
