--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -141,9 +141,9 @@
 
     <script th:inline="javascript">
         $(document).ready(function () {
-               $('#guardar').click(function(){
-                    $("#loader").addClass("loader");
-                    });
+                $('#guardar').click(function(){
+		validate_value_field();
+	});
         if ([[${msg}]] === 0){
         swal({
         title: "Exito!",
