--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -86,9 +86,12 @@
     </body>
     <script th:inline="javascript">
         $(document).ready(function () {
-               $('#guardar').click(function(){
-                    $("#loader").addClass("loader");
-                    });
+             $('#guardar').click(function(){
+		validate_value_field();
+	});
+//               $('#guardar').click(function(){
+//                    $("#loader").addClass("loader");
+//                    });
         if ([[${msg}]] === 0){
             $("#loader").addClass("loader");
                     
