--- a/src/main/resources/templates/fragments/dependiente/dependienteform.html
+++ b/src/main/resources/templates/fragments/dependiente/dependienteform.html
@@ -265,8 +265,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 		    });
 		});
                 $('#btnGuardar').click(function(){
+                    var flag =validate_value_field();
+        if(flag==false){
             $("#formdependiente").attr('action', '../dependiente/'+ $("#codem").val().toString());
             $("form#formdependiente").submit();
+        }
+            
             
         });
 	</script>
