--- a/src/main/resources/templates/fragments/descuento/descuentoform.html
+++ b/src/main/resources/templates/fragments/descuento/descuentoform.html
@@ -73,7 +73,7 @@
                         <div class="col-md-12">
                                 <div class="row" align="center">
                                     <a href="#" th:href="@{/descuentos/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>
-                                    <button type="submit" onclick="fecha_format();"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                                    <button type="submit" id="guardar"  onclick="fecha_format();"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                                     <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                                 </div>
                             </div>
@@ -87,6 +87,9 @@
         </div> 
         <script th:inline="javascript">
             $(document).ready(function () {
+                $('#guardar').click(function(){
+		validate_value_field();
+	});
             if ([[${msg}]] === 0){
             swal({
             title: "Exito!",
