--- a/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicaform.html
+++ b/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicaform.html
@@ -263,9 +263,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 		});
                 
                   $('#btnGuardar').click(function(){
-                       $("#loader").addClass("loader");
-            $("#formubicacion").attr('action', '../ubicacionfisica/'+ $("#codem").val().toString());
-            $("form#formubicacion").submit();
+//                       $("#loader").addClass("loader");
+var flag =validate_value_field();
+        if(flag==false){
+                      $("#formubicacion").attr('action', '../ubicacionfisica/'+ $("#codem").val().toString());
+            $("form#formubicacion").submit();  
+        }
+
             
         });
 
