arturo jodiendo todo... de nuevo

--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -92,9 +92,9 @@
                             </select>
                         </div>
                               <div class="popup col-sm-1"><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('tipocapacitadorr')" onmouseout ="javascript:ocultarAyuda('tipocapacitadorr')">a</a></b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('tipocapacitador')" onmouseout ="javascript:ocultarAyuda('tipocapacitador')">a</a></b>
                         
-                        <span class="popuptext" id="tipocapacitadorr">Seleccione el tipo de capacitador!</span>
+                        <span class="popuptext" id="tipocapacitador">Seleccione el tipo de capacitador!</span>
                     </div>
                     </div>
                     <div class="form-group">
@@ -108,9 +108,9 @@
                             </select>
                         </div>
                              <div class="popup col-sm-1"><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('tipoagrupacionn')" onmouseout ="javascript:ocultarAyuda('tipoagrupacionn')">a</a></b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('tipoagrupacion')" onmouseout ="javascript:ocultarAyuda('tipoagrupacion')">a</a></b>
                         
-                        <span class="popuptext" id="tipoagrupacionn">Seleccione el tipo de agrupacioón!</span>
+                        <span class="popuptext" id="tipoagrupacion">Seleccione el tipo de agrupacioón!</span>
                     </div>
                     </div>
                     <div class="form-group">
